book/chapt2/err.txt
hw7.cpp: In function ‘int main()’:
hw7.cpp:6:2: error: return-statement with no value, in function returning ‘int’ [-fpermissive]
  return ;
  ^
